# CovidMap

./: .gitignore  README.md  notes revisão.md
backend-web/context-api/: .env  Cargo.toml  diesel.toml
backend-web/context-api/src/: main.rs  schema.rs
backend-web/context-api/src/embedder/: mod.rs
backend-web/context-api/src/routes/: date.rs  document.rs  mod.rs  search.rs  snippet.rs
backend-web/context-api/src/services/: date.rs  document.rs  mod.rs  search.rs  snippet.rs
frontend-web/covitext/: package-lock.json
frontend-web/covitext/src/: app.css  app.html
frontend-web/covitext/src/lib/: NAVBAR.svelte  NAVITEM.svelte
frontend-web/covitext/src/routes/: __layout.svelte  index.svelte
notebooks/: BERT-fy.ipynb  dados.csv  ex_cd.ipynb  grammar.peg  grammar.rs  indexer.ipynb  pickler.ipynb  producer.ipynb
parser/: .env  Cargo.toml  grammar.peg
parser/benches/: benches.rs  common.rs
parser/src/: database.rs  indexer.rs  lib.rs  main.rs  search.rs  transformer.rs  utils.rs
thesis/Anteprojeto/: ante-projeto.tex  referencias.bib  sintese.tex
thesis/Anteprojeto/abntex2/: abntex2-modelo-trabalho-academico.tex
thesis/Revisão Bibliográfica/Diagramas/: TCC.drawio  ~$TCC.drawio.bkp
web/covitext/: package-lock.json  package.json  svelte.config.js
web/covitext/src/: app.html
web/covitext/src/lib/: DOCUMENT_MODAL.svelte
web/covitext/src/routes/: index.svelte
