[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
json = "0.12.4"
peg = "0.7.0"
postgres = "0.19.2"
regex = "1.5.4"
sbert = { git = "https://github.com/cpcdoy/rust-sbert/", branch = "character_bert" }

[features]

[env]
