[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
dotenv = "0.15.0"
futures = "0.3.19"
json = "0.12.4"
peg = "0.7.0"
regex = "1.5.4"
sbert = { git = "https://github.com/cpcdoy/rust-sbert/", branch = "character_bert" }
tokio = { version = "1.15.0", features = ["full"] }
tokio-postgres = "0.7.5"

[features]

