[package]
name = "context-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
serde = "1.0.137"
diesel_full_text_search = "1.0.1"
pgvector = { version = "0.1.4", features = ["sqlx"] }
sbert = "0.3.0"
env = "0.0.0"
anyhow = "1.0.57"
sqlx = { version = "0.5.13", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
